--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "browser-sync": "^2.18.13",
+    "child-process": "^1.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^7.0.0"
   }
