--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "browser-sync": "^2.18.13",
     "child-process": "^1.0.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^7.0.0"
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
